fix: define minimum height of auth placeholder to reduce layout shift

--- a/assets/scss/hanko.scss
+++ b/assets/scss/hanko.scss
@@ -76,3 +76,7 @@ hanko-auth::part(container), hanko-profile::part(container) {
 .hanko-dialog {
     border-radius: $theme-border-radius;
 }
+
+.auth-placeholder {
+    min-height: 400px;
+}
